Initial commit to the finished branch

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-  <script language="javascript" type="text/javascript" src="js/p5/p5.js"></script>
-  <script language="javascript" src="js/p5/addons/p5.sound.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.sound.min.js"></script>
   <style>
     body {
       padding: 0;
@@ -11,7 +11,7 @@
       width:100%;
     }
 
-    .formbox{
+    .container{
       position:absolute;
       left:50%;
       top:10%;
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <div class="formbox">
+  <div class="container">
     <div class="button-wrapper">
       <button id="success" type="button">Success!</button>
     </div>
